# Tunkio

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Kuura.cppcheck  ReadMe.md  Tunkio-Linux.props  Tunkio.cppcheck  Tunkio.props  Tunkio.sln  WinDiskWipe.props  WinDiskWipe.sln
KuuraAPI/: CMakeLists.txt  Kuura.py  KuuraAPI-PCH.hpp  KuuraAPI.c  KuuraAPI.cpp  KuuraAPI.h  KuuraAPI.rc  KuuraCallbackContainer.hpp  KuuraComposer.cpp  KuuraComposer.hpp  KuuraDirectory.cpp  KuuraDirectory.hpp  KuuraFile.hpp
KuuraAPI/FillConsumers/: KuuraDirectory.cpp  KuuraDirectory.hpp  KuuraDrive.hpp  KuuraFile.hpp  KuuraFillConsumer.hpp
KuuraAPI/FillProviders/: KuuraByteFiller.cpp  KuuraByteFiller.hpp  KuuraFileFIller.cpp  KuuraFileFiller.hpp  KuuraFillProvider.hpp  KuuraRandomFiller.cpp  KuuraRandomFiller.hpp  KuuraSequenceFiller.cpp  KuuraSequenceFiller.hpp
KuuraAPI/Posix/: KuuraPosixDrive.cpp  KuuraPosixFile.cpp  KuuraPosixIO.cpp  KuuraPosixIO.hpp
KuuraAPI/Win32/: DllMain.cpp  KuuraWin32Drive.cpp  KuuraWin32File.cpp  KuuraWin32IO.cpp  KuuraWin32IO.hpp
KuuraAPI/Workloads/: KuuraDirectoryOverwrite.cpp  KuuraDirectoryOverwrite.hpp  KuuraDirectoryWipe.cpp  KuuraDirectoryWipe.hpp  KuuraDirectoryWorkload.cpp  KuuraDirectoryWorkload.hpp  KuuraDriveOverwrite.cpp  KuuraDriveOverwrite.hpp  KuuraDriveWipe.cpp  KuuraDriveWipe.hpp  KuuraDriveWorkload.cpp  KuuraDriveWorkload.hpp  KuuraFileOverwrite.cpp  KuuraFileOverwrite.hpp  KuuraFileWipe.cpp  KuuraFileWipe.hpp  KuuraFileWorkload.cpp  KuuraFileWorkload.hpp  KuuraWorkload.cpp  KuuraWorkload.hpp
KuuraCLI/: CMakeLists.txt  KuuraArgument.cpp  KuuraArgument.hpp  KuuraCLI-PCH.hpp  KuuraCLI.cpp  KuuraCLI.hpp  KuuraCLI.rc  Main.cpp
KuuraGUI/: AlgorithmTab.cpp  AlgorithmTab.hpp  AlgorithmTab.ui  CMakeLists.txt  DriveSelectDialog.cpp  DriveSelectDialog.ui  DriveSelectTab.cpp  DriveSelectTab.hpp  DriveSelectTab.ui  Kuura.qrc  KuuraGUI-PCH.hpp  KuuraGUI.rc  KuuraRunner.cpp  KuuraRunner.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OverwritePassModel.cpp  OverwritePassModel.hpp  PathSelectTab.cpp  PathSelectTab.hpp  PathSelectTab.ui  ProgressBarDelegate.cpp  ProgressBarDelegate.hpp  ProgressModel.cpp  ProgressModel.hpp  ProgressTab.cpp  ProgressTab.hpp  ProgressTab.ui  ResultsTab.cpp  ResultsTab.hpp  ResultsTab.ui  TargetSelectTab.cpp  TargetSelectTab.hpp  TargetSelectTab.ui  TextEditorDialog.cpp  TextEditorDialog.hpp  TextEditorDialog.ui  WipePassModel.cpp  (+1 more)
KuuraLIB/: CMakeLists.txt  KuuraDataUnits.cpp  KuuraDataUnits.hpp  KuuraDriveInfo.hpp  KuuraErrorCodes.hpp  KuuraLIB-PCH.hpp  KuuraTime.cpp  KuuraTime.hpp
KuuraLIB/BSD/: KuuraBSDDriveInfo.cpp
KuuraTests/: CMakeLists.txt  KuuraAPITest.cpp  KuuraArgsTest.cpp  KuuraDataUnitTest.cpp  KuuraDirectoryMock.cpp  KuuraDriveMock.cpp  KuuraFileMock.cpp  KuuraFillerTests.cpp  KuuraTests-PCH.hpp  KuuraTimeTest.cpp  TestMain.cpp
TunkioAPI/: CMakeLists.txt  TunkioAPI-PCH.hpp  TunkioAPI.c  TunkioAPI.cpp  TunkioAPI.h  TunkioDirectory.cpp  TunkioDirectory.hpp  TunkioFile.hpp
TunkioCLI/: CMakeLists.txt  Main.cpp  PCH.hpp  TunkioArgs.cpp  TunkioArgs.hpp  TunkioArgument.cpp  TunkioArgument.hpp  TunkioArguments.cpp  TunkioArguments.hpp  TunkioCLI-PCH.hpp  TunkioCLI-WSL.vcxproj  TunkioCLI-Windows.vcxproj  TunkioCLI.cpp  TunkioCLI.hpp  TunkioCLI.vcxproj  TunkioChildProcess.cpp  TunkioChildProcess.hpp  TunkioDataUnits.hpp  TunkioErrorCodes.hpp  TunkioProcess.hpp  TunkioTime.cpp  TunkioTime.hpp  TunkioTiming.hpp
TunkioDLL/: CMakeLists.txt  DllMain.cpp  ITunkioOperation.hpp  PCH.cpp  PCH.hpp  TunkioAPI-PCH.hpp  TunkioAPI.cpp  TunkioAPI.def  TunkioAPI.h  TunkioAPICheck.c  TunkioArgs.cpp  TunkioArgs.hpp  TunkioDLL-WSL.vcxproj  TunkioDLL-Windows.vcxproj  TunkioDLL.vcxproj  TunkioDLL.vcxproj.filters  TunkioDeviceWipe.cpp  TunkioDeviceWipe.hpp  TunkioDirectoryWipe.cpp  TunkioDirectoryWipe.hpp  TunkioDriveWipe.cpp  TunkioDriveWipe.hpp  TunkioEncoding.cpp  TunkioEncoding.hpp  TunkioErrorCodes.hpp  TunkioExitCodes.hpp  TunkioFile.hpp  TunkioFileSystem.hpp  TunkioFileWipe.cpp  TunkioFileWipe.hpp  TunkioFillGenerator.cpp  TunkioFillGenerator.hpp  TunkioFillStrategy.cpp  TunkioFillStrategy.hpp  TunkioHandle.cpp  TunkioHandle.hpp  TunkioIO.cpp  TunkioIO.hpp  TunkioIOAlias.hpp  TunkioNative.cpp  (+8 more)
TunkioGUI/: CMakeLists.txt  DriveSelectDialog.cpp  DriveSelectDialog.hpp  DriveSelectDialog.ui  FLTK.props  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Nana.props  PCH.hpp  ProgressBarDelegate.cpp  ProgressBarDelegate.hpp  Resource.h  TextEditorDialog.cpp  TextEditorDialog.hpp  TextEditorDialog.ui  Tunkio.qrc  TunkioGUI-PCH.hpp  TunkioGUI-Windows.vcxproj  TunkioGUI.aps  TunkioGUI.cpp  TunkioGUI.hpp  TunkioGUI.rc  TunkioGUI.vcxproj  TunkioProgressDialog.cpp  TunkioProgressDialog.hpp  TunkioRunner.cpp  TunkioRunner.hpp  WipePassModel.cpp  WipePassModel.hpp
TunkioLIB/: CMakeLists.txt  PCH.cpp  PCH.hpp  TunkioArgs.cpp  TunkioArgs.hpp  TunkioAutoHandle.hpp  TunkioDataUnits.cpp  TunkioDataUnits.hpp  TunkioDriveInfo.hpp  TunkioErrorCodes.hpp  TunkioInstance.cpp  TunkioInstance.hpp  TunkioLIB-PCH.hpp  TunkioLIB-WSL.vcxproj  TunkioLIB-Windows.vcxproj  TunkioLIB.vcxproj  TunkioMemory.hpp  TunkioPosixAutoHandle.cpp  TunkioPosixAutoHandle.hpp  TunkioPosixChildProcess.cpp  TunkioPosixChildProcess.hpp  TunkioProcess.hpp  TunkioTime.cpp  TunkioTime.hpp  TunkioWin32AutoHandle.hpp  TunkioWin32ChildProcess.cpp  TunkioWin32ChildProcess.hpp
TunkioTests/: CMakeLists.txt  PCH.hpp  TestMain.cpp  TunkioAPITest.cpp  TunkioArgsTest.cpp  TunkioDataUnitTest.cpp  TunkioDirectoryMock.cpp  TunkioEncodingTest.cpp  TunkioFileMock.cpp  TunkioFileSystemMock.cpp  TunkioFileSystemMock.hpp  TunkioFillStategyTest.cpp  TunkioFillerTests.cpp  TunkioHandleTest.cpp  TunkioIOMock.cpp  TunkioIOMock.hpp  TunkioIOTest.cpp  TunkioMockDeviceWipe.cpp  TunkioMockDirectoryWipe.cpp  TunkioMockDriveWipe.cpp  TunkioMockFileWipe.cpp  TunkioOperatingSystemMock.cpp  TunkioOperatingSystemMock.hpp  TunkioOutputMock.cpp  TunkioOutputMock.hpp  TunkioTests-PCH.hpp  TunkioTests-Windows.vcxproj  TunkioTests.vcxproj  TunkioTests.vcxproj.filters  TunkioTimeTest.cpp
(+129 files in other folders)
