# KuuraAPI

if(CMAKE_SYSTEM_NAME MATCHES "Windows")
	file(GLOB KuuraAPISource "KuuraAPI.c" "*.cpp" "Workloads/*.cpp" "FillProviders/*.cpp" "FillConsumers/*.cpp" "Win32/*.cpp")
	add_library("KuuraAPI" SHARED ${KuuraAPISource})
	target_precompile_headers("KuuraAPI" PRIVATE "KuuraAPI-PCH.hpp")
	set_source_files_properties("KuuraAPI.c" PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
	target_include_directories("KuuraAPI" PRIVATE "../KuuraLIB/")
	set_target_properties("KuuraAPI" PROPERTIES PUBLIC_HEADER "KuuraAPI.h")
endif()

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
	file(GLOB KuuraAPISource "KuuraAPI.c" "*.cpp" "Workloads/*.cpp" "FillProviders/*.cpp" "FillConsumers/*.cpp" "Posix/*.cpp")
	add_library("kuura-api" SHARED ${KuuraAPISource})
	target_precompile_headers("kuura-api" PRIVATE "KuuraAPI-PCH.hpp")
	set_source_files_properties("KuuraAPI.c" PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
	target_include_directories("kuura-api" PRIVATE "../KuuraLIB/")
	set_target_properties("kuura-api" PROPERTIES PUBLIC_HEADER "KuuraAPI.h")
endif()

if(CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
	file(GLOB KuuraAPISource "KuuraAPI.c" "*.cpp" "Workloads/*.cpp" "FillProviders/*.cpp" "FillConsumers/*.cpp" "Posix/*.cpp")
	add_library("kuura-api" SHARED ${KuuraAPISource})
	if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
		target_precompile_headers("kuura-api" PRIVATE "KuuraAPI-PCH.hpp")
	endif()
	set_source_files_properties("KuuraAPI.c" PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
	target_include_directories("kuura-api" PRIVATE "../KuuraLIB/")
	set_target_properties("kuura-api" PROPERTIES PUBLIC_HEADER "KuuraAPI.h")
endif()
