# TunkioAPI

if(CMAKE_SYSTEM_NAME MATCHES "Windows")
	file(GLOB TunkioAPISource "TunkioAPI.c" "*.cpp" "Workloads/*.cpp" "FillProviders/*cpp" "Win32/*.cpp")
	add_library("TunkioAPI" SHARED ${TunkioAPISource})
	target_precompile_headers("TunkioAPI" PRIVATE "TunkioAPI-PCH.hpp")
	set_source_files_properties("TunkioAPI.c" PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
	target_include_directories("TunkioAPI" PRIVATE "../TunkioLIB/")
	set_target_properties("TunkioAPI" PROPERTIES PUBLIC_HEADER "TunkioAPI.h")
else()
	file(GLOB TunkioAPISource "TunkioAPI.c" "*.cpp" "Workloads/*.cpp" "FillProviders/*cpp" "Posix/*.cpp")
	add_library("tunkio-api" SHARED ${TunkioAPISource})
	target_precompile_headers("tunkio-api" PRIVATE "TunkioAPI-PCH.hpp")
	set_source_files_properties("TunkioAPI.c" PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
	target_include_directories("tunkio-api" PRIVATE "../TunkioLIB/")
	set_target_properties("tunkio-api" PROPERTIES PUBLIC_HEADER "TunkioAPI.h")
endif()
