# TunkioCLI

if(CMAKE_SYSTEM_NAME MATCHES "Windows")
	file(GLOB TunkioCLISource "*.cpp")
	add_executable("TunkioCLI" ${TunkioCLISource})
	target_precompile_headers("TunkioCLI" PRIVATE "TunkioCLI-PCH.hpp")
	target_link_libraries("TunkioCLI" LINK_PRIVATE TunkioAPI TunkioDEV)
else()
	file(GLOB TunkioCLISource "*.cpp")
	add_executable("tunkio-cli" ${TunkioCLISource})
	if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
		target_precompile_headers("tunkio-cli" PRIVATE "TunkioCLI-PCH.hpp")
	endif()
	target_link_libraries("tunkio-cli" LINK_PRIVATE tunkio-api tunkio-dev)
endif()
